--- a/src/express/templates/errors/404.pug
+++ b/src/express/templates/errors/404.pug
@@ -6,27 +6,23 @@ html(lang='ru')
     meta(name='description' content='Личный блог Типотека')
     meta(http-equiv='X-UA-Compatible' content='ie=edge')
     title Типотека
-    link(rel='preload' href='./fonts/Inter-Regular.woff2' as='font' crossorigin='anonymous')
-    link(rel='preload' href='./fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
-    link(rel='preload' href='./fonts/SFProDisplay-Regular.woff2' as='font' crossorigin='anonymous')
-    link(rel='stylesheet' href='css/style.min.css')
+    link(rel='preload' href='/fonts/Inter-Regular.woff2' as='font' crossorigin='anonymous')
+    link(rel='preload' href='/fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
+    link(rel='preload' href='/fonts/SFProDisplay-Regular.woff2' as='font' crossorigin='anonymous')
+    link(rel='stylesheet' href='/css/style.min.css')
   body
     .wrapper-color
       header.header.header--error
         a.header__logo.header__logo--404.logo(href='#')
-          img(src='img/icons/logo.svg' alt='логотип Тайпотеки')
-        a.header__registration(href='#') Регистрация
-        a.header__enter(href='#') Вход с паролем
+          img(src='/img/icons/logo.svg' alt='логотип Тайпотеки')
+        a.header__registration(href='/register') Регистрация
+        a.header__enter(href='/login') Вход с паролем
         a.header__search.button.button--search(href='#' aria-label='поиск по сайту')
       main
         h1.visually-hidden Ошибка 404
         section.error
           h2.error__title.title.title--big Похоже ошиблись адресом
-          a.error__link.text.text--big(href='main.html') Вернуться на главную
-      footer.footer
-        a.footer__copyright(href='#' aria-label='HTMLAcademy')
-          img(src='img/icons/HTMLAcademyLogo.svg' width='112' height='50' alt='HTMLAcademy')
-        span.footer__dot
-        p.footer__text Типотека, 2019
-    script(src='js/vendor.js')
-    script(src='js/main.js')
+          a.error__link.text.text--big(href='/') Вернуться на главную
+      include ../partials/footer.pug
+    script(src='/js/vendor.js')
+    script(src='/js/main.js')
