--- a/src/express/templates/errors/500.pug
+++ b/src/express/templates/errors/500.pug
@@ -6,17 +6,17 @@ html(lang='ru')
     meta(name='description' content='Личный блог Типотека')
     meta(http-equiv='X-UA-Compatible' content='ie=edge')
     title Типотека
-    link(rel='preload' href='./fonts/Inter-Regular.woff2' as='font' crossorigin='anonymous')
-    link(rel='preload' href='./fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
-    link(rel='preload' href='./fonts/SFProDisplay-Regular.woff2' as='font' crossorigin='anonymous')
-    link(rel='stylesheet' href='css/style.min.css')
+    link(rel='preload' href='/fonts/Inter-Regular.woff2' as='font' crossorigin='anonymous')
+    link(rel='preload' href='/fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
+    link(rel='preload' href='/fonts/SFProDisplay-Regular.woff2' as='font' crossorigin='anonymous')
+    link(rel='stylesheet' href='/css/style.min.css')
   body
     .wrapper-color
       header.header.header--error
         a.header__logo.header__logo--500.logo(href='#')
-          img(src='img/icons/logo.svg' alt='логотип Тайпотеки')
-        a.header__registration(href='#') Регистрация
-        a.header__enter(href='#') Вход с паролем
+          img(src='/img/icons/logo.svg' alt='логотип Тайпотеки')
+        a.header__registration(href='/register') Регистрация
+        a.header__enter(href='/login') Вход с паролем
         a.header__search.button.button--search(href='#' aria-label='поиск по сайту')
       main
         h1.visually-hidden Ошибка 500
@@ -25,11 +25,7 @@ html(lang='ru')
           p.error__text.text.text--big
             | Причин может быть много: сервер не выдержал нагрузку или в коде ошибка.
             | Попробуйте повторить попытку позже.
-          a.error__link.text.text--big(href='main.html') Вернуться на главную
-      footer.footer
-        a.footer__copyright(href='#' aria-label='HTMLAcademy')
-          img(src='img/icons/HTMLAcademyLogo.svg' width='112' height='50' alt='HTMLAcademy')
-        span.footer__dot
-        p.footer__text Типотека, 2019
-    script(src='js/vendor.js')
-    script(src='js/main.js')
+          a.error__link.text.text--big(href='/') Вернуться на главную
+      include ../partials/footer.pug
+    script(src='/js/vendor.js')
+    script(src='/js/main.js')
