--- a/src/express/templates/comments.pug
+++ b/src/express/templates/comments.pug
@@ -1,4 +1,4 @@
-extends ./admin/layout-admin.pug
+extends ./layout.pug
 
 block content
 
@@ -8,7 +8,7 @@ block content
       ul.publication__list
         li.publication__list-item
           .publication__header
-            img.publication__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+            img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
             b.publication__list-name Александр Петров
             time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
           a.publication__item-text(href='#')
@@ -19,7 +19,7 @@ block content
             span.visually-hidden Закрыть строку списка
         li.publication__list-item
           .publication__header
-            img.publication__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+            img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
             b.publication__list-name Александр Петров
             time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
           a.publication__item-text(href='#')
@@ -30,7 +30,7 @@ block content
             span.visually-hidden Закрыть строку списка
         li.publication__list-item
           .publication__header
-            img.publication__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+            img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
             b.publication__list-name Александр Петров
             time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
           a.publication__item-text(href='#')
@@ -41,7 +41,7 @@ block content
             span.visually-hidden Закрыть строку списка
         li.publication__list-item
           .publication__header
-            img.publication__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+            img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
             b.publication__list-name Александр Петров
             time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
           a.publication__item-text(href='#')
@@ -52,7 +52,7 @@ block content
             span.visually-hidden Закрыть строку списка
         li.publication__list-item
           .publication__header
-            img.publication__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+            img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
             b.publication__list-name Александр Петров
             time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
           a.publication__item-text(href='#')
@@ -63,7 +63,7 @@ block content
             span.visually-hidden Закрыть строку списка
         li.publication__list-item
           .publication__header
-            img.publication__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+            img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
             b.publication__list-name Александр Петров
             time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
           a.publication__item-text(href='#')
@@ -74,7 +74,7 @@ block content
             span.visually-hidden Закрыть строку списка
         li.publication__list-item.publication__list-item--last
           .publication__header
-            img.publication__list-image(src='img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
+            img.publication__list-image(src='/img/avatar-small-2.png' width='20' height='20' alt='Аватар пользователя')
             b.publication__list-name Александр Петров
             time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
           a.publication__item-text(href='#')
