--- a/src/express/templates/new-post.pug
+++ b/src/express/templates/new-post.pug
@@ -6,7 +6,7 @@ block content
     section
       .popup.popup--new-publication.popup--anti
         .new-publication
-          form(action='#' method='POST')
+          form(action=`${article ? '/articles/' + article.id : '/articles/add'}` method='POST' enctype="multipart/form-data" autocomplete="off")
             .new-publication__header
               h1 Новая публикация
               .new-publication__date-form
@@ -23,20 +23,29 @@ block content
               .form__wrapper.form__wrapper--intro
                 .form__field
                   label
-                    input(type='text' name='title' placeholder='Заголовок' required='')
+                    input(type='text' name='title' placeholder='Заголовок' value=`${article && article.title ? article.title : ''}` required='')
                 .form__field.form__field--post-image
                   label
-                    input#image-name-field(type='text' name='photo' placeholder='Фотография' readonly='')
+                    input#image-name-field(type='text' name='picture' value=`${article && article.img ? article.img : ''}` placeholder='Фотография' readonly)
                   .form__image-loader.form__image-loader--publication
                     label
                       input.visually-hidden(type='file' name='upload')
                       | Обзор
                 .new-publication__category-wrapper
-                  a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
+                  if (categories.length)
+                    each category, index in categories
+                      - const idName = `category-${index}`
+                      - const isChecked = article ? article.category.includes(category) : false
+                      .new-publication__checkbox.new-publication__checkbox--auto
+                          input(type='checkbox' name= 'category[]' id=idName value=category checked= isChecked)
+                          label(for=idName) #{category}
+                  a.new-publication__form-link.button.button--transparent(href='/categories') Добавить категорию
+
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='5' name='announcement' placeholder='Анонс публикации')
+                    textarea(rows='5' name='announcement' placeholder='Анонс публикации') #{article ? article.announce : ''}
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='10' name='full-text' placeholder='Полный текст публикации')
+                    textarea(rows='10' name='full-text' placeholder='Полный текст публикации') #{article ? article.fullText : ''}
+
